# PocketMage_PDA

./: .gitignore  README.md
.github/: index.html
.github/workflows/: build.yml  web-flasher.yml
Code/AstraLuaApp/: README.md
Code/AstraLuaApp/src/: appMain.cpp  appMain_old.cpp  minilua.c
Code/FlashCardApp/: README.md
Code/FlashCardApp/lib/pocketmage_eink/include/: pocketmage_eink.h
Code/FlashCardApp/src/: appMain.cpp  assets.cpp
Code/GlucoseApp/: README.md
Code/GlucoseApp/src/: appMain.cpp
Code/MusicApp/: README.md  platformio.ini
Code/MusicApp/include/: assets.h
Code/MusicApp/src/: appMain.cpp  globals.cpp
Code/PocketMage_V3/data/sys/kbd/: de-qwertz.json  fr-azerty.json  us-basic.json  us-latin.json
Code/PocketMage_V3/include/: PERIODIC.h  PocketMageGraphics.h  PokedexUI.h  atom_icon.h  globals.h  periodic_data.h  periodic_data_pack.h
Code/PocketMage_V3/lib/PocketMage/src/: pocketmage_kb.cpp  pocketmage_sys.cpp
Code/PocketMage_V3/src/: APP_TEMPLATE.cpp  AstraLuaApp_APP.cpp  CALENDAR.cpp  FILEWIZ.cpp  FlashCardApp_APP.cpp  GlucoseApp_APP.cpp  HELLO_WORLD.cpp  HOME.cpp  JOURNAL.cpp  LEXICON.cpp  MusicApp_APP.cpp  OLEDFunc.cpp  PERIODIC.cpp  POKEDEX.cpp  PocketMageGraphics.cpp  PocketMageV3.cpp  PokedexUI.cpp  SETTINGS.cpp  StarterApp_APP.cpp  TASKS.cpp  TXT.cpp  TerminalApp_APP.cpp  USB.cpp  UTILS.cpp  einkFunc.cpp  globals.cpp  sysFunc.cpp
Code/PocketMage_V3/src/OS_APPS/: APPLAUNCHER.cpp  CALENDAR.cpp  HOME.cpp  TASKS.cpp  TXT_NEW.cpp
Code/StarterApp/: README.md  starterApp.tar
Code/StarterApp/include/: globals.h
Code/StarterApp/lib/pocketmage_eink/src/: pocketmage_eink.cpp
Code/StarterApp/src/: appMain.cpp
desktop_emulator/: .gitignore  CMakeLists.txt  README.md  build-mac-deb.sh  build-red-hat.sh  build-test.sh  build.bat  export_app.py  install_app.py  load_app.sh
desktop_emulator/data/: welcome.txt
desktop_emulator/data/flashcards/: capitals.csv  stats.csv  vocabulary.csv
desktop_emulator/data/glucose/: 2025-12-08.csv
desktop_emulator/data/lua/: bmi.lua  circle.lua  compound.lua  distance.lua  factorial.lua  loan.lua  pythagoras.lua  quadratic.lua  squares.lua  temperature.lua  trig.lua
desktop_emulator/data/pokemon/: pokemon_data.rec  pokemon_flavor.str  pokemon_genus.str  pokemon_index.idx  pokemon_names.str
desktop_emulator/data/sys/kbd/: us-basic.json  us-latin.json
desktop_emulator/docs/: APP_DEVELOPMENT.md  COMMANDS.md  CONTROL_FLOW.md  KEYMAPPING.md
desktop_emulator/fonts/: README.md  download_fonts.sh
desktop_emulator/fonts/gfx/: FreeMono12pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeMonoBoldOblique18pt7b.h  FreeMonoBoldOblique24pt7b.h  FreeMonoBoldOblique9pt7b.h  FreeMonoOblique9pt7b.h  FreeSans12pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h  FreeSansBold9pt7b.h  FreeSansBoldOblique12pt7b.h  FreeSansBoldOblique18pt7b.h  FreeSansBoldOblique24pt7b.h  FreeSansBoldOblique9pt7b.h  FreeSansOblique9pt7b.h  FreeSerif12pt7b.h  FreeSerif9pt7b.h  FreeSerifBold12pt7b.h  FreeSerifBold18pt7b.h  FreeSerifBold24pt7b.h  FreeSerifBold9pt7b.h  FreeSerifBoldItalic12pt7b.h  FreeSerifBoldItalic18pt7b.h  FreeSerifBoldItalic24pt7b.h  FreeSerifBoldItalic9pt7b.h  FreeSerifItalic9pt7b.h
desktop_emulator/include/: README.md
desktop_emulator/include/Fonts/: Font3x7FixedNum.h  Font4x5Fixed.h  Font5x7Fixed.h  FreeMono12pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeMonoBoldOblique18pt7b.h  FreeMonoBoldOblique24pt7b.h  FreeMonoBoldOblique9pt7b.h  FreeMonoOblique9pt7b.h  FreeSans12pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h  FreeSansBold9pt7b.h  FreeSansBoldOblique12pt7b.h  FreeSansBoldOblique18pt7b.h  FreeSansBoldOblique24pt7b.h  FreeSansBoldOblique9pt7b.h  FreeSansOblique9pt7b.h  FreeSerif12pt7b.h  FreeSerif9pt7b.h  FreeSerifBold12pt7b.h  FreeSerifBold18pt7b.h  FreeSerifBold24pt7b.h  FreeSerifBold9pt7b.h  FreeSerifBoldItalic12pt7b.h  FreeSerifBoldItalic18pt7b.h  FreeSerifBoldItalic24pt7b.h  FreeSerifBoldItalic9pt7b.h  FreeSerifItalic9pt7b.h
desktop_emulator/include/display/: Adafruit_GFX.h  GxEPD2_BW.h  U8g2lib.h  desktop_display_sdl2.h  oled_service.h
desktop_emulator/include/driver/: gpio.h  sdmmc_host.h
desktop_emulator/include/esp32/: Arduino.h  Update.h  esp32-hal-log.h  esp_cpu.h  esp_log.h  esp_ota_ops.h  pgmspace.h
desktop_emulator/include/freertos/: FreeRTOS.h  task.h
desktop_emulator/include/hardware/: Buzzer.h  ESP32-targz.h  MP2722.h  RTClib.h  SPI.h  USB.h  USBMSC.h  Wire.h
desktop_emulator/include/input/: Adafruit_MPR121.h  Adafruit_TCA8418.h  hid_host.h  hid_usage_keyboard.h  hid_usage_mouse.h
desktop_emulator/include/pocketmage/: pocketmage_bz.h  pocketmage_clock.h  pocketmage_compat.h  pocketmage_eink.h  pocketmage_kb.h  pocketmage_oled.h  pocketmage_sd.h  pocketmage_stubs.h  pocketmage_sys.h  pocketmage_touch.h
desktop_emulator/include/storage/: FS.h  Preferences.h  SD_MMC.h  sdmmc_cmd.h
desktop_emulator/include/usb/: usb_host.h
desktop_emulator/src/: desktop_display_linux.cpp  desktop_display_macos.cpp  desktop_display_sdl2.cpp  desktop_display_sdl2_linux.cpp  desktop_display_sdl2_windows.cpp  desktop_display_windows.cpp  gfx_fonts.cpp  hardware_shim.cpp  main.cpp  main_new.cpp  oled_service.cpp  pocketmage_shim.cpp  pocketmage_stubs.cpp  text_utils_desktop.cpp
tools/IconEditor/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  pixelcanvas.cpp  pixelcanvas.h
tools/IconEditor/deprecated/Image/: README.md  download_stb.sh  download_stb_resize.sh  image_to_bitmap.cpp  image_to_icon  image_to_icon.cpp
tools/utils/Periodic Table/: gen_elements.py  pack_periodic.py
tools/utils/Pokemon/: pokemon_data_converter.py  pokemon_simplified.json
